updated the enterprise-catalog config to deploy on python 3.8

--- a/playbooks/roles/enterprise_catalog/defaults/main.yml
+++ b/playbooks/roles/enterprise_catalog/defaults/main.yml
@@ -33,7 +33,7 @@ ENTERPRISE_CATALOG_CELERY_BROKER_PASSWORD: ''
 ENTERPRISE_CATALOG_CELERY_BROKER_HOSTNAME: ''
 ENTERPRISE_CATALOG_CELERY_BROKER_VHOST: ''
 
-ENTERPRISE_CATALOG_USE_PYTHON38: false
+ENTERPRISE_CATALOG_USE_PYTHON38: True
 
 enterprise_catalog_environment:
   ENTERPRISE_CATALOG_CFG: '{{ COMMON_CFG_DIR }}/{{ enterprise_catalog_service_name }}.yml'
