--- a/playbooks/roles/mysql/tasks/main.yml
+++ b/playbooks/roles/mysql/tasks/main.yml
@@ -1,22 +1,10 @@
 ---
 
-# Install PPA for installing MySQL 5.6 on Ubuntu 12.04LTS
-- name: install ppa key
-  apt_key:
-    id=E5267A6C
-    url='{{ COMMON_UBUNTU_APT_KEYSERVER }}0x14AA40EC0831756756D7F66C4F4EA0AAE5267A6C'
-    state=present
-
-- name: install apt repository
-  apt_repository:
-    repo='deb http://ppa.launchpad.net/ondrej/mysql-5.6/ubuntu precise main'
-    update_cache=yes
-
-- name: install mysql 56 and dependencies
+- name: install mysql 57 and dependencies
   apt: pkg={{ item }} install_recommends=yes force=yes state=present
   with_items:
     - software-properties-common
-    - mysql-server
+    - mysql-server-5.7
 
 - name: start mysql
   service: name=mysql state=started
